# odoo-sh-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/odoo_sh_mcp/: __init__.py  client.py  server.py
src/odoo_sh_mcp/scaffold/: __init__.py  generator.py
src/odoo_sh_mcp/tools/: __init__.py  logs.py  modules.py  orm.py  ssh.py  views.py
tests/: test_orm.py  test_scaffold.py  test_ssh.py
